[gd_scene load_steps=5 format=3 uid="uid://bvmymh5twd5rw"]

[ext_resource type="Script" uid="uid://cajtth8ifu24n" path="res://canvas_layer.gd" id="1_v2lfg"]

[sub_resource type="FontFile" id="FontFile_wf015"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="CanvasTexture" id="CanvasTexture_v2lfg"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tg4cr"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_v2lfg")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 9.0
offset_right = 233.0
offset_bottom = 96.0
theme_override_fonts/font = SubResource("FontFile_wf015")
theme_override_font_sizes/font_size = 64
text = "Score: 0"

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "GAME OVER
Score: 0"
horizontal_alignment = 1

[node name="GameRestartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -119.0
offset_right = 4.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 48
disabled = true
text = "Restart Game?"

[node name="OxygenLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -606.0
offset_top = 6.0
offset_right = -441.0
offset_bottom = 94.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "100%"

[node name="OxygenMask" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(928, 53)
scale = Vector2(422.37506, 53.250004)
texture = SubResource("CanvasTexture_v2lfg")

[node name="OxygenBar" type="Sprite2D" parent="OxygenMask"]
modulate = Color(0.3469093, 0.7366195, 0.8973135, 1)
texture = SubResource("CanvasTexture_tg4cr")

[connection signal="pressed" from="GameRestartButton" to="." method="_on_game_restart_button_pressed"]
